# TechTuesday-CDK

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
Docs/: openapi.yaml
app/: app.ts
app/stacks/: api-stack.ts  tasks-service.ts
docs/: diagram.py  openapi.yaml
functions/: delete_task.py  get_task.py  get_tasks.py
src/Tasks/py/: pyproject.toml
src/Tasks/py/functions/: complete_task.py  create_task.py  delete_task.py  get_task.py  get_tasks.py
src/api/py/: pyproject.toml
src/api/py/functions/: health_check.py  serve_docs.py
src/py/: complete_task.py  create_task.py  get_task.py  get_tasks.py  health.py  update_task.py
src/py/Tasks/: update_task.py
src/py/api/: health_check.py
